fix 'postLimiter' middleware to return next() after checking the rate. position flash message section to not be hidden by the navbar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,6 +49,11 @@ nav.scrolled {
   color:white;
 }
 
+.flash {
+  margin-top:80px;
+  margin-bottom:-80px;
+}
+
 img {
   max-width:100%;
   height:auto !important;
